// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBellIcon renders when the drawer is closed 1`] = `
<span
  className="m-notification-bell-icon m-notification-bell-icon--closed m-notification-bell-icon--read"
  dangerouslySetInnerHTML={
    Object {
      "__html": "SVG",
    }
  }
/>
`;

exports[`NotificationBellIcon renders when the drawer is open 1`] = `
<span
  className="m-notification-bell-icon m-notification-bell-icon--open m-notification-bell-icon--read"
  dangerouslySetInnerHTML={
    Object {
      "__html": "SVG",
    }
  }
/>
`;
